--- a/code/test.html
+++ b/code/test.html
@@ -2,39 +2,21 @@
 <html>
     <head>
         <meta charset=utf-8>
-        <style type="text/css">
-            .box {
-                width: 100px;
-                height: 100px;
-                border: solid 1px black;
-                /*补全代码*/
-                position: relative;
-            }
-            .btn{
-                width: 20px;
-                height: 20px;
-                background-color: red;
-                /*补全代码*/
-                position: absolute;
-                top: -10px;
-                right: -10px;
-                text-align: center;
-                line-height: 20px;
-            }
-        </style>
     </head>
     <body>
-
-        <div class='box'>
-            <div class='btn'>X</div>
-        </div>
+        <input id="input" type="text" />
+        <span id="span"></span>
 
         <script type="text/javascript">
-            var btn = document.querySelector('.btn');
-            var box = document.querySelector('.box');
-            btn.onclick = function(){
-                // 补全代码
-                box.style.display="none";
+            // 补全代码
+            let input_e=document.getElementById("input");
+            let span_e=document.getElementById("span");
+            input_e.onchange=function(){
+                span_e.innerText=input_e.value;
+            }
+
+            input_e.onchange=function(){
+                span_e.innerText=this.value;
             }
         </script>
     </body>
