--- a/code/test.html
+++ b/code/test.html
@@ -76,5 +76,31 @@
     app.mount("#todo-list-example");
 </script>
 
+<div id="div1">div元素</div>
+<script type="text/javascript">
+
+Function.prototype.bind=function(){
+    var self=this;  //保存原函数
+    var context=[].shift.call(arguments);  //需要绑定的 this 上下文
+    var args=[].slice.call(arguments);  //剩余的参数转成数组
+    return function(){  // 返回一个新的函数
+        return self.apply(context,[].concat.call(args,[].slice.call(arguments)));  // 执行新的函数的时候，会把之前传入的 context当作新函数体内的 this
+        //并且组合两次分别传入的参数，作为新函数的参数
+    }
+};
+
+var obj={
+    name:"Arnold"
+};
+
+var func=function(a,b,c,d){
+    console.log(this.name);  //Arnold
+    console.log([a,b,c,d]);  // 
+}.bind(obj,1,2);
+
+func(3,4);
+
+</script>
+
     </body>
 </html>
