--- a/code/test.html
+++ b/code/test.html
@@ -43,39 +43,20 @@
 <button id="undo">点击我执行命令</button>
 
 <script type="text/javascript">
-//闭包版本
-var Tv={
-    open:function(){
-        console.log("打开电视机");
-    },
-    close:function(){
-        console.log("关闭电视机");
-    }
+var getSingle=function(fn){
+   var ret;
+   return function(){
+      return ret || (ret=fn.apply(this,arguments));
+   };
 };
 
-var createCommand=function(receiver){
-    var execute=function(){
-        return receiver.open();  //执行命令，打开电视机
-    };
-    var undo=function(){
-        return receiver.close();  //执行命令，关闭电视机
-    };
-    return {
-        execute:execute,
-        undo:undo
-    }
-};
+var getScript=getSingle(function(){
+   return document.createElement("script");
+});
 
-var setCommand=function(command){
-    document.getElementById("execute").onclick=function(){
-        command.execute();  //输出：打开电视机
-    }
-    document.getElementById("undo").onclick=function(){
-        command.undo();  //输出：关闭电视机
-    }
-};
-
-setCommand(createCommand(Tv));
+var script1=getScript();
+var script2=getScript();
+console.log(script1===script2);
 
 </script>
 
