--- a/code/test.html
+++ b/code/test.html
@@ -39,24 +39,31 @@
 </style>
     <body>
 
-<button id="execute">点击我执行命令</button>
-<button id="undo">点击我执行命令</button>
+<div id="div1">点我绑定事件</div>
 
 <script type="text/javascript">
-var getSingle=function(fn){
-   var ret;
-   return function(){
-      return ret || (ret=fn.apply(this,arguments));
-   };
+
+var addEvent=function(elem,type,handler){
+    if (window.addEventListener) {
+        addEvent=function(elem,type,handler){
+            elem.addEventListener(type,handler,false);
+        }
+    }else if (window.attachEvent) {
+        addEvent=function(elem,type,handler){
+            elem.attachEvent('on'+type,handler);
+        }
+    }
+    addEvent(elem,type,handler);
 };
 
-var getScript=getSingle(function(){
-   return document.createElement("script");
+var div = document.getElementById( 'div1' );
+addEvent( div, 'click', function(){
+    console.log(1);
 });
 
-var script1=getScript();
-var script2=getScript();
-console.log(script1===script2);
+addEvent( div, 'click', function(){
+    console.log(2);
+});
 
 </script>
 
