--- a/code/test.html
+++ b/code/test.html
@@ -39,30 +39,50 @@
 </style>
     <body>
 
-<div id="date-picker" class="demo">
-  <custom-layout id="custom-layout" @click="changeValue"></custom-layout>
+<div id="v-model-example" class="demo">
+   <my-component v-model.capitalize="myText"></my-component>
+   {{myText}}
 </div>
 
 <script type="text/javascript">
 
 const app = Vue.createApp({
-  methods: {
-    showChange(event) {
-      console.log(event.target.value) // 将打印所选选项的值
+  data(){
+    return {
+      myText:"",
     }
-  }
+  },
 });
 
 // 没有警告，$attrs 被传递到 <main> 元素
-app.component('custom-layout', {
+app.component('my-component', {
+  props:{
+    modelValue:String,
+    modelModifiers:{
+      default:()=>({})
+    }
+  },
+  emits:['update:modelValue'],
+  methods:{
+    emitValue(e){
+      let value=e.target.value;
+      if (this.modelModifiers.capitalize) {
+        value=value.charAt(0).toUpperCase()+value.slice(1);
+      }
+      this.$emit('update:modelValue',value);
+    }
+  },
   template: `
-    <header>...</header>
-    <main v-bind="$attrs">...</main>
-    <footer>...</footer>
-  `
+    <input type="text" 
+      :value="modelValue" 
+      @input="emitValue">
+  `,
+  created(){
+    console.log(this.modelModifiers);
+  }
 });
 
-app.mount("#date-picker")
+app.mount("#v-model-example")
 
 </script>
 
