--- a/code/test.html
+++ b/code/test.html
@@ -72,15 +72,24 @@ var Validator=function(){
   this.cache=[];  //保存校验规则
 };
 
-Validator.prototype.add = function( dom, rule, errorMsg ){
-  var ary = rule.split( ':' ); // 把 strategy 和参数分开
-  this.cache.push(function(){ // 把校验的步骤用空函数包装起来，并且放入 cache
-    var strategy = ary.shift(); // 用户挑选的 strategy
-    ary.unshift( dom.value ); // 把 input 的 value 添加进参数列表
-    ary.push( errorMsg ); // 把 errorMsg 添加进参数列表
-    return strategies[ strategy ].apply( dom, ary );
-  });
+Validator.prototype.add = function( dom, rules ){
+  var self=this;
+  for(let i=0,rule;i<rules.length;i++){
+    rule=rules[i];
+    (function(rule){
+      var strategyAry = rule.strategy.split( ':' );
+      var errorMsg = rule.errorMsg;
+      self.cache.push(function(){
+        //把校验的步骤用空函数包装起来，并且放入 cache
+        var strategy = strategyAry.shift(); // 用户挑选的 strategy
+        strategyAry.unshift( dom.value ); // 把 input 的 value 添加进参数列表
+        strategyAry.push( errorMsg ); // 把 errorMsg 添加进参数列表
+        return strategies[ strategy ].apply( dom, strategyAry );
+      });
+    })(rule);
+  }
 };
+
 Validator.prototype.start = function(){
   for ( var i = 0, validatorFunc; validatorFunc = this.cache[ i++ ]; ){
     var msg = validatorFunc(); // 开始校验，并取得校验后的返回信息
@@ -93,9 +102,21 @@ Validator.prototype.start = function(){
 var validateFunc=function(){
   var validator=new Validator();  //创建一个 validator 对象
   //添加一些校验规则
-  validator.add( registerForm.userName, 'isNonEmpty', '用户名不能为空' );
-  validator.add( registerForm.password, 'minLength:6', '密码长度不能少于 6 位' );
-  validator.add( registerForm.phoneNumber, 'isMobile', '手机号码格式不正确' );
+  validator.add( registerForm.userName, [{
+    strategy: 'isNonEmpty',
+    errorMsg: '用户名不能为空'
+    }, {
+    strategy: 'minLength:6',
+    errorMsg: '用户名长度不能小于 10 位'
+    }]);
+  validator.add( registerForm.password, [{
+    strategy: 'minLength:6',
+    errorMsg: '密码长度不能小于 6 位'
+    }]);
+  validator.add( registerForm.phoneNumber, [{
+    strategy: 'isMobile',
+    errorMsg: '手机号码格式不正确'
+    }]);
   var errorMsg = validator.start(); // 获得校验结果
   return errorMsg; // 返回校验结果
 }
@@ -108,9 +129,6 @@ registerForm.onsubmit = function(){
       return false; // 阻止表单提交
     }
 };
-
-
-
 
 </script>
 
