--- a/code/test.html
+++ b/code/test.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset=utf-8>
+        <title>test</title>
         <script src="https://unpkg.com/vue@3.2.31"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </head>
@@ -40,95 +41,36 @@
 </style>
     <body>
 <div id="demo">
-  <form action="#" id="registerForm" method="post">
-    请输入用户名：<input type="text" name="userName"/ >
-    请输入密码：<input type="text" name="password"/ >
-    请输入手机号码：<input type="text" name="phoneNumber"/ >
-    <button>提交</button>
-  </form>
+  
 </div>
 
 <script type="text/javascript">
 
-var strategies={
-  isNonEmpty:function(value,errorMessage){
-    if (value==="") {
-      return errorMessage;
-    }
-  },
-  minLength:function(value,length,errorMessage){
-    if (value.length<length) {
-      return errorMessage;
-    }
-  },
-  isMobile:function(value,errorMessage){
-    if (!/(^1[3|5|8][0-9]{9}$)/.test(value)) {
-      return errorMessage;
-    }
-  },
-};
-
-var Validator=function(){
-  this.cache=[];  //保存校验规则
-};
-
-Validator.prototype.add = function( dom, rules ){
-  var self=this;
-  for(let i=0,rule;i<rules.length;i++){
-    rule=rules[i];
-    (function(rule){
-      var strategyAry = rule.strategy.split( ':' );
-      var errorMsg = rule.errorMsg;
-      self.cache.push(function(){
-        //把校验的步骤用空函数包装起来，并且放入 cache
-        var strategy = strategyAry.shift(); // 用户挑选的 strategy
-        strategyAry.unshift( dom.value ); // 把 input 的 value 添加进参数列表
-        strategyAry.push( errorMsg ); // 把 errorMsg 添加进参数列表
-        return strategies[ strategy ].apply( dom, strategyAry );
-      });
-    })(rule);
-  }
-};
-
-Validator.prototype.start = function(){
-  for ( var i = 0, validatorFunc; validatorFunc = this.cache[ i++ ]; ){
-    var msg = validatorFunc(); // 开始校验，并取得校验后的返回信息
-    if ( msg ){ // 如果有确切的返回值，说明校验没有通过
-      return msg;
+var myImage=(function(){
+  var imgNode=document.createElement("img");
+  document.body.appendChild(imgNode);
+  return {
+    setSrc:function(src){
+      imgNode.src=src;
     }
   }
-};
+})();
 
-var validateFunc=function(){
-  var validator=new Validator();  //创建一个 validator 对象
-  //添加一些校验规则
-  validator.add( registerForm.userName, [{
-    strategy: 'isNonEmpty',
-    errorMsg: '用户名不能为空'
-    }, {
-    strategy: 'minLength:6',
-    errorMsg: '用户名长度不能小于 10 位'
-    }]);
-  validator.add( registerForm.password, [{
-    strategy: 'minLength:6',
-    errorMsg: '密码长度不能小于 6 位'
-    }]);
-  validator.add( registerForm.phoneNumber, [{
-    strategy: 'isMobile',
-    errorMsg: '手机号码格式不正确'
-    }]);
-  var errorMsg = validator.start(); // 获得校验结果
-  return errorMsg; // 返回校验结果
-}
-
-var registerForm = document.getElementById( 'registerForm' );
-registerForm.onsubmit = function(){
-    var errorMsg = validateFunc(); // 如果 errorMsg 有确切的返回值，说明未通过校验
-    if ( errorMsg ){
-      alert ( errorMsg );
-      return false; // 阻止表单提交
+var proxyImage=(function(){
+  var img=new Image;
+  img.onload=function(){
+    myImage.setSrc(this.src);
+  }
+  return {
+    setSrc:function(src){
+      myImage.setSrc("../image/CSS 轮廓.png");
+      img.src=src;
     }
-};
+  }
+})();
+
+proxyImage.setSrc("https://v3.cn.vuejs.org/images/components_provide.png");
+
 
 </script>
 
