--- a/code/test.html
+++ b/code/test.html
@@ -17,75 +17,138 @@
   user-select: none;
   overflow-x: auto;
 }
+body {
+  font-family: "Bitter", serif;
+  background: #333;
+  color: white;
+}
 
-.tab-button {
-  padding: 6px 10px;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  border: 1px solid #ccc;
+#app {
+  text-align: center;
+  margin: 60px;
+  margin: 0 auto;
+  display: table;
+}
+
+button {
+  font-family: "Bitter";
+  background: #c62735;
+  color: white;
+  border: 0;
+  padding: 5px 15px;
+  margin: 0 10px;
+  border-radius: 4px;
+  outline: 0;
   cursor: pointer;
-  background: #f0f0f0;
-  margin-bottom: -1px;
-  margin-right: -1px;
 }
-.tab-button:hover {
-  background: #e034e0;
+
+.img-contain {
+  width: 250px;
+  height: 160px;
+  overflow: hidden;
+  transform-origin: 50% 50%;
 }
-.tab-button.active {
-  background: #02e0e0;
+
+img {
+  width: 100%;
+  transform-origin: 50% 50%;
+  cursor: pointer;
+  transform: scaleY(1) translateZ(0);
+  margin: 5px;
 }
-.demo-tab {
-  border: 1px solid #ccc;
-  padding: 10px;
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.img-contain:hover .overlay {
+  opacity: 1;
+  background: hsla(50, 0%, 0%, 0.6);
+  transition: 0.3s all ease-out;
+}
+
+.img-contain .overlay {
+  position: absolute;
+  z-index: 1000;
+  display: block;
+  width: 245px;
+  height: 155px;
+  margin: 5px;
+  opacity: 0;
+  overflow: hidden;
+  transition: 0.3s all ease-in;
+}
+
+.overlay-text {
+  margin-top: 40px;
+}
+
+h4 {
+  margin: 0 0 15px;
+}
+
+.flip-enter-active {
+  transition: all 0.2s cubic-bezier(0.55, 0.085, 0.68, 0.53); //ease-in-quad
+  transform-origin: 50% 50%;
+}
+
+.flip-leave-active {
+  transform-origin: 50% 50%;
+  transition: all 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94); //ease-out-quad
+}
+
+.flip-enter-from,
+.flip-leave-to {
+  transform-origin: 50% 50%;
+  transform: scaleY(0) translateZ(0);
+  opacity: 0;
 }
 </style>
-    <body>
-<div id="demo">
-  <button id="replay">播放录像</button>
+<body>
+<div id="app">
+  <h3>Hover us.</h3>
+  <main>
+    <app-child>
+      <img src='https://images.unsplash.com/photo-1520182205149-1e5e4e7329b4?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='image of a woman on a train'>
+    </app-child>
+    <app-child>
+      <img src='https://images.unsplash.com/photo-1501421018470-faf26f6b1bef?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt='drawing of a woman sharing soda with a zombie'>
+    </app-child>
+  </main>
 </div>
 
+
 <script type="text/javascript">
-var Ryu = {
-  attack: function(){
-    console.log( '攻击' );
-  },
-  defense: function(){
-    console.log( '防御' );
-  },
-  jump: function(){
-    console.log( '跳跃' );
-  },
-  crouch: function(){
-    console.log( '蹲下' );
-  }
-};
-var makeCommand = function( receiver, state ){ // 创建命令
-  return  receiver[ state ];
-};
-var commands = {
-  "119": "jump", // W
-  "115": "crouch", // S
-  "97": "defense", // A
-  "100": "attack" // D
-};
+const app = Vue.createApp({});
 
-var commandStack = []; // 保存命令的堆栈
-document.onkeypress = function( ev ){
-  var keyCode = ev.keyCode,
-  command = makeCommand( Ryu, commands[ keyCode ] );
-  if ( command ){
-    command(); // 执行命令
-    commandStack.push( command ); // 将刚刚执行过的命令保存进堆栈
+app.component("app-child", {
+  template: `<div class="img-contain">
+  <div class="overlay">
+    <p class="overlay-text">I don't like this one</p>
+      <button @click="toggleShow">Replace!</button>
+  </div>
+    <transition name="flip" mode="out-in">
+      <div v-if="!isShowing">
+        <slot></slot>
+      </div>
+      <img v-else src='https://images.unsplash.com/flagged/photo-1563248101-a975e9a18cc6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
+    </transition>
+  </div>`,
+  data() {
+    return {
+      isShowing: false
+    }
+  },
+  methods: {
+    toggleShow() {
+      this.isShowing = !this.isShowing;
+    }
   }
-};
-document.getElementById( 'replay' ).onclick = function(){ // 点击播放录像
-  var command;
-  while( command = commandStack.shift() ){ // 从堆栈里依次取出命令并执行
-    command();
-  }
-};
+});
 
-
+app.mount("#app");
 </script>
 
     </body>
