--- a/code/test.html
+++ b/code/test.html
@@ -11,91 +11,107 @@ body {
   margin: 30px;
 }
 
-svg {
-  display: block;
-}
 
-polygon {
-  fill: #41b883;
-}
-
-circle {
-  fill: transparent;
-  stroke: #35495e;
-}
-
-input[type="range"] {
-  display: block;
-  width: 100%;
-  margin-bottom: 15px;
-}
 </style>
-<body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
 
-<div id="app">
-  <input v-model.number="firstNumber" type="number" step="20" /> +
-  <input v-model.number="secondNumber" type="number" step="20" /> = {{ result }}
-  <p>
-    <animated-integer :value="firstNumber"></animated-integer> +
-    <animated-integer :value="secondNumber"></animated-integer> =
-    <animated-integer :value="result"></animated-integer>
-  </p>
-</div>
+<body>
+
 
 <script type="text/javascript">
-const app = Vue.createApp({
-  data() {
-    return {
-      firstNumber: 20,
-      secondNumber: 40
-    }
-  },
-  computed: {
-    result() {
-      return this.firstNumber + this.secondNumber
+
+var Upload = function( uploadType){
+  this.uploadType = uploadType;
+};
+
+Upload.prototype.delFile = function(){
+  uploadManager.setExternalState( id, this ); // (1)
+  if ( this.fileSize < 3000 ){
+    return this.dom.parentNode.removeChild( this.dom );
+  }
+  if ( window.confirm( '确定要删除该文件吗? ' + this.fileName ) ){
+    return this.dom.parentNode.removeChild( this.dom );
+  }
+};
+
+var UploadFactory = (function(){
+  var createdFlyWeightObjs = {};
+  return {
+    create: function( uploadType){
+      if ( createdFlyWeightObjs [ uploadType] ){
+        return createdFlyWeightObjs [ uploadType];
+      }
+      return createdFlyWeightObjs [ uploadType] = new Upload( uploadType);
+      }
+  }
+})();
+
+var uploadManager = (function(){
+  var uploadDatabase = {};
+  return {
+    add: function( id, uploadType, fileName, fileSize ){
+      var flyWeightObj = UploadFactory.create( uploadType );
+      var dom = document.createElement( 'div' );
+      dom.innerHTML =
+      '<span>文件名称:'+ fileName +', 文件大小: '+ fileSize +'</span>' +
+      '<button class="delFile">删除</button>';
+      dom.querySelector( '.delFile' ).onclick = function(){
+        flyWeightObj.delFile( id );
+      }
+      document.body.appendChild( dom );
+      uploadDatabase[ id ] = {
+        fileName: fileName,
+        fileSize: fileSize,
+        dom: dom
+      };
+      return flyWeightObj ;
+    },
+    setExternalState: function( id, flyWeightObj ){
+      var uploadData = uploadDatabase[ id ];
+      for ( var i in uploadData ){
+        flyWeightObj[ i ] = uploadData[ i ];
+      }
     }
   }
-})
+})();
 
-app.component('animated-integer', {
-  template: '<span>{{ fullValue }}</span>',
-  props: {
-    value: {
-      type: Number,
-      required: true
-    }
-  },
-  data() {
-    return {
-      tweeningValue: 0
-    }
-  },
-  computed: {
-    fullValue() {
-      return Math.floor(this.tweeningValue)
-    }
-  },
-  methods: {
-    tween(newValue, oldValue) {
-      gsap.to(this.$data, {
-        duration: 0.5,
-        tweeningValue: newValue,
-        ease: 'sine'
-      })
-    }
-  },
-  watch: {
-    value(newValue, oldValue) {
-      this.tween(newValue, oldValue)
-    }
-  },
-  mounted() {
-    this.tween(this.value, 0)
+var id = 0;
+window.startUpload = function( uploadType, files ){ // uploadType 区分是控件还是 flash
+  for ( var i = 0, file; file = files[ i++ ]; ){
+    var uploadObj = uploadManager.add( ++id, uploadType, file.fileName, file.fileSize );
   }
-})
+};
 
-app.mount('#app')
+startUpload( 'plugin', [
+  {
+  fileName: '1.txt',
+  fileSize: 1000
+  },
+  {
+  fileName: '2.html',
+  fileSize: 3000
+  },
+  {
+  fileName: '3.txt',
+  fileSize: 5000
+  }
+]);
+
+startUpload( 'flash', [
+  {
+  fileName: '4.txt',
+  fileSize: 1000
+  },
+  {
+  fileName: '5.html',
+  fileSize: 3000
+  },
+  {
+  fileName: '6.txt',
+  fileSize: 5000
+  }
+]);
+
+
 </script>
 
     </body>
