--- a/code/test.html
+++ b/code/test.html
@@ -15,19 +15,27 @@ body {
 </style>
 
 <body>
-<div id="demo">
-  <input type="text" v-focus />
+<div id="demo" class="demo">
+  <p>Scroll down inside this section ↓</p>
+  <input type="range" min="0" max="500" v-model="pinPadding">
+  <p v-pin:[direction]="pinPadding">Stick me {{ pinPadding + 'px' }} from the {{ direction || 'top' }} of the page</p>
 </div>
 
-
 <script type="text/javascript">
-  const app=Vue.createApp({});
+  const app=Vue.createApp({
+    data(){
+      return {
+        direction:"right",
+        pinPadding:200,
+      }
+    },
+  });
   // 注册一个全局自定义指令 `v-focus`
-  app.directive('focus',{
-    //当被绑定的元素挂载到 DOM 中时
-    mounted(el){
-      el.focus();  //聚焦元素
-    }
+  app.directive('pin',(el,binding)=>{
+      el.style.position="fixed";
+      // binding.value 是我们传递给指令的值——在这里是 200
+      let s=binding.arg || "top";
+      el.style[s]=binding.value+"px";
   });
   app.mount("#demo");
 
