--- a/code/test.html
+++ b/code/test.html
@@ -15,50 +15,66 @@ body {
 
 <body>
 
-用户名：<input id="username" type="text"/>
-密码： <input id="password" type="password"/>
-<input id="submitBtn" type="button" value="提交">
 
 <script type="text/javascript">
 
-var username = document.getElementById( 'username' ),
-  password = document.getElementById( 'password' ),
-  submitBtn = document.getElementById( 'submitBtn' );
+var OffLightState=function(light){
+  this.light=light;
+};
+OffLightState.prototype.buttonWasPressed=function(){
+  console.log( '弱光' ); // offLightState 对应的行为
+  this.light.setState(this.light.weakLightState);  //切换状态到 weakLightState
+};
 
-Function.prototype.before=function(beforefn){
-  var __self=this;  //保存原函数的引用
-  return function(){  //返回包含了原函数和新函数的"代理"函数
-    if(beforefn.apply(this,arguments)===false){
-      return;  //beforefn 返回 false 的情况直接 return，不再执行后面的原函数
-    };  
-    return __self.apply(this,arguments);  //(2)  执行原函数并返回原函数的执行结果，并且保证 this 不被劫持
+var WeakLightState=function(light){
+  this.light=light;
+};
+WeakLightState.prototype.buttonWasPressed=function(){
+  console.log( '强光' ); // weakLightState 对应的行为
+  this.light.setState( this.light.strongLightState ); // 切换状态到 strongLightState
+};
+
+var StrongLightState = function( light ){
+  this.light = light;
+};
+StrongLightState.prototype.buttonWasPressed = function(){
+  console.log( '超强光' ); // strongLightState 对应的行为
+  this.light.setState( this.light.superStrongLightState ); // 切换状态到 superStrongLightState
+};
+
+var SuperStrongLightState = function( light ){
+  this.light = light;
+};
+SuperStrongLightState.prototype.buttonWasPressed = function(){
+  console.log( '关灯' );
+  this.light.setState( this.light.offLightState );
+};
+
+var Light=function(){
+  this.offLightState=new OffLightState(this);
+  this.weakLightState=new WeakLightState(this);
+  this.strongLightState=new StrongLightState(this);
+  this.superStrongLightState=new SuperStrongLightState(this);
+  this.button=null;
+};
+
+Light.prototype.init=function(){
+  var button=document.createElement("button");
+  var self=this;
+  button.innerHTML="开关";
+  this.button=document.body.appendChild(button);
+  this.currentState=this.offLightState;  //设置当前状态
+  this.button.onclick=function(){
+    self.currentState.buttonWasPressed();
   }
-}
+};
 
-var validata=function(){
-  if ( username.value === '' ){
-    alert ( '用户名不能为空' );
-    return false;
-  }
-  if ( password.value === '' ){
-    alert ( '密码不能为空' );
-    return false;
-  }
-}
+Light.prototype.setState=function(newState){
+  this.currentState=newState;
+};
 
-var formSubmit = function(){
-  var param = {
-    username: username.value,
-    password: password.value
-  }
-  ajax( 'http:// xxx.com/login', param ); // ajax 具体实现略
-}
-
-formSubmit=formSubmit.before(validata);
-
-submitBtn.onclick = function(){
-  formSubmit();
-}
+var light=new Light();
+light.init();
 
 
 </script>
