--- a/code/test.html
+++ b/code/test.html
@@ -17,65 +17,39 @@ body {
 
 
 <script type="text/javascript">
+  var Light=function(){
+    this.currState=FSM.off;  //设置当前状态
+    this.button=null;
+  };
+  Light.prototype.init=function(){
+    var button=document.createElement("button");
+    var self=this;
+    button.innerHTML="已关灯";
+    this.button=document.body.appendChild(button);
+    this.button.onclick=function(){
+      self.currState.buttonWasPressed.call(self);  // 把请求委托给 FSM 状态机
+    }
+  };
 
-var OffLightState=function(light){
-  this.light=light;
-};
-OffLightState.prototype.buttonWasPressed=function(){
-  console.log( '弱光' ); // offLightState 对应的行为
-  this.light.setState(this.light.weakLightState);  //切换状态到 weakLightState
-};
+  var FSM={
+    off:{
+      buttonWasPressed:function(){
+        console.log("关灯");
+        this.button.innerHTML = '下一次按我是开灯';
+        this.currState = FSM.on;
+      }
+    },
+    on:{
+      buttonWasPressed:function(){
+        console.log( '开灯' );
+        this.button.innerHTML = '下一次按我是关灯';
+        this.currState = FSM.off;
+      }
+    }
+  };
 
-var WeakLightState=function(light){
-  this.light=light;
-};
-WeakLightState.prototype.buttonWasPressed=function(){
-  console.log( '强光' ); // weakLightState 对应的行为
-  this.light.setState( this.light.strongLightState ); // 切换状态到 strongLightState
-};
-
-var StrongLightState = function( light ){
-  this.light = light;
-};
-StrongLightState.prototype.buttonWasPressed = function(){
-  console.log( '超强光' ); // strongLightState 对应的行为
-  this.light.setState( this.light.superStrongLightState ); // 切换状态到 superStrongLightState
-};
-
-var SuperStrongLightState = function( light ){
-  this.light = light;
-};
-SuperStrongLightState.prototype.buttonWasPressed = function(){
-  console.log( '关灯' );
-  this.light.setState( this.light.offLightState );
-};
-
-var Light=function(){
-  this.offLightState=new OffLightState(this);
-  this.weakLightState=new WeakLightState(this);
-  this.strongLightState=new StrongLightState(this);
-  this.superStrongLightState=new SuperStrongLightState(this);
-  this.button=null;
-};
-
-Light.prototype.init=function(){
-  var button=document.createElement("button");
-  var self=this;
-  button.innerHTML="开关";
-  this.button=document.body.appendChild(button);
-  this.currentState=this.offLightState;  //设置当前状态
-  this.button.onclick=function(){
-    self.currentState.buttonWasPressed();
-  }
-};
-
-Light.prototype.setState=function(newState){
-  this.currentState=newState;
-};
-
-var light=new Light();
-light.init();
-
+  var light=new Light();
+  light.init();
 
 </script>
 
