--- a/code/test.html
+++ b/code/test.html
@@ -6,14 +6,14 @@
         <script src="https://unpkg.com/vue@3.2.31"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <!-- 引入 echarts.js -->
-        <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js"></script>
+        <script src="https://cdn.staticfile.org/echarts/5.3.2/echarts.min.js"></script>
     </head>
 <style type="text/css">
 body {
   margin: 30px;
 }
 #main{
-  height: 400px;
+  height: 800px;
 }
 
 </style>
@@ -25,175 +25,68 @@ body {
 
 <script type="text/javascript">
   // 基于准备好的dom，初始化echarts实例
-  var myChart=echarts.init(document.getElementById("main"),"dark");
+  var myChart=echarts.init(document.getElementById("main"));
   window.onresize=function(){
     myChart.resize();
   }
   // 指定图表的配置项和数据
-var data = [
-  [
-    [28604, 77, 17096869, 'Australia', 1990],
-    [31163, 77.4, 27662440, 'Canada', 1990],
-    [1516, 68, 1154605773, 'China', 1990],
-    [13670, 74.7, 10582082, 'Cuba', 1990],
-    [28599, 75, 4986705, 'Finland', 1990],
-    [29476, 77.1, 56943299, 'France', 1990],
-    [31476, 75.4, 78958237, 'Germany', 1990],
-    [28666, 78.1, 254830, 'Iceland', 1990],
-    [1777, 57.7, 870601776, 'India', 1990],
-    [29550, 79.1, 122249285, 'Japan', 1990],
-    [2076, 67.9, 20194354, 'North Korea', 1990],
-    [12087, 72, 42972254, 'South Korea', 1990],
-    [24021, 75.4, 3397534, 'New Zealand', 1990],
-    [43296, 76.8, 4240375, 'Norway', 1990],
-    [10088, 70.8, 38195258, 'Poland', 1990],
-    [19349, 69.6, 147568552, 'Russia', 1990],
-    [10670, 67.3, 53994605, 'Turkey', 1990],
-    [26424, 75.7, 57110117, 'United Kingdom', 1990],
-    [37062, 75.4, 252847810, 'United States', 1990]
-  ],
-  [
-    [44056, 81.8, 23968973, 'Australia', 2015],
-    [43294, 81.7, 35939927, 'Canada', 2015],
-    [13334, 76.9, 1376048943, 'China', 2015],
-    [21291, 78.5, 11389562, 'Cuba', 2015],
-    [38923, 80.8, 5503457, 'Finland', 2015],
-    [37599, 81.9, 64395345, 'France', 2015],
-    [44053, 81.1, 80688545, 'Germany', 2015],
-    [42182, 82.8, 329425, 'Iceland', 2015],
-    [5903, 66.8, 1311050527, 'India', 2015],
-    [36162, 83.5, 126573481, 'Japan', 2015],
-    [1390, 71.4, 25155317, 'North Korea', 2015],
-    [34644, 80.7, 50293439, 'South Korea', 2015],
-    [34186, 80.6, 4528526, 'New Zealand', 2015],
-    [64304, 81.6, 5210967, 'Norway', 2015],
-    [24787, 77.3, 38611794, 'Poland', 2015],
-    [23038, 73.13, 143456918, 'Russia', 2015],
-    [19360, 76.5, 78665830, 'Turkey', 2015],
-    [38225, 81.4, 64715810, 'United Kingdom', 2015],
-    [53354, 79.1, 321773631, 'United States', 2015]
-  ]
-];
 
-option = {
-  backgroundColor: {
-    type: 'radial',
-    x: 0.3,
-    y: 0.3,
-    r: 0.8,
-    colorStops: [
-      {
-        offset: 0,
-        color: '#f7f8fa'
-      },
-      {
-        offset: 1,
-        color: '#cdd0d5'
+var option = {
+  dataset: [
+    {
+      dimensions: ['name', 'age', 'profession', 'score', 'date'],
+      source: [
+        [' Hannah Krause ', 41, 'Engineer', 314, '2011-02-12'],
+        ['Zhao Qian ', 20, 'Teacher', 351, '2011-03-01'],
+        [' Jasmin Krause ', 52, 'Musician', 287, '2011-02-14'],
+        ['Li Lei', 37, 'Teacher', 219, '2011-02-18'],
+        [' Karle Neumann ', 25, 'Engineer', 253, '2011-04-02'],
+        [' Adrian Groß', 19, 'Teacher', null, '2011-01-16'],
+        ['Mia Neumann', 71, 'Engineer', 165, '2011-03-19'],
+        [' Böhm Fuchs', 36, 'Musician', 318, '2011-02-24'],
+        ['Han Meimei ', 67, 'Engineer', 366, '2011-03-12']
+      ]
+    },
+    {
+      transform: {
+        type: 'sort',
+        config: [
+        // 对两个维度按声明的优先级分别排序。
+          { dimension: 'profession', order: 'desc' },
+          { dimension: 'score', order: 'desc' }
+        ]
       }
-    ]
-  },
-  grid: {
-    left: 10,
-    containLabel: true,
-    bottom: 10,
-    top: 10,
-    right: 30
-  },
+    }
+  ],
   xAxis: {
-    splitLine: {
-      show: false
-    }
+    type: 'category',
+    axisLabel: { interval: 0, rotate: 30 }
   },
-  yAxis: {
-    splitLine: {
-      show: false
+  yAxis: {},
+  series: {
+    type: 'bar',
+    label: {
+      show: true,
+      rotate: 90,
+      position: 'insideBottom',
+      align: 'left',
+      verticalAlign: 'middle'
     },
-    scale: true
-  },
-  series: [
-    {
-      name: '1990',
-      data: data[0],
-      type: 'scatter',
-      symbolSize: function(data) {
-        return Math.sqrt(data[2]) / 5e2;
-      },
-      emphasis: {
-        focus: 'series',
-        label: {
-          show: true,
-          formatter: function(param) {
-            return param.data[3];
-          },
-          position: 'top'
-        }
-      },
-      itemStyle: {
-        shadowBlur: 10,
-        shadowColor: 'rgba(120, 36, 50, 0.5)',
-        shadowOffsetY: 5,
-        color: {
-          type: 'radial',
-          x: 0.4,
-          y: 0.3,
-          r: 1,
-          colorStops: [
-            {
-              offset: 0,
-              color: 'rgb(251, 118, 123)'
-            },
-            {
-              offset: 1,
-              color: 'rgb(204, 46, 72)'
-            }
-          ]
-        }
+    itemStyle: {
+      color: function (params) {
+        return {
+          Engineer: '#5470c6',
+          Teacher: '#91cc75',
+          Musician: '#fac858'
+        }[params.data[2]];
       }
     },
-    {
-      name: '2015',
-      data: data[1],
-      type: 'scatter',
-      symbolSize: function(data) {
-        return Math.sqrt(data[2]) / 5e2;
-      },
-      emphasis: {
-        focus: 'series',
-        label: {
-          show: true,
-          formatter: function(param) {
-            return param.data[3];
-          },
-          position: 'top'
-        }
-      },
-      itemStyle: {
-        shadowBlur: 10,
-        shadowColor: 'rgba(25, 100, 150, 0.5)',
-        shadowOffsetY: 5,
-        color: {
-          type: 'radial',
-          x: 0.4,
-          y: 0.3,
-          r: 1,
-          colorStops: [
-            {
-              offset: 0,
-              color: 'rgb(129, 227, 238)'
-            },
-            {
-              offset: 1,
-              color: 'rgb(25, 183, 207)'
-            }
-          ]
-        }
-      }
-    }
-  ]
+    encode: { x: 'name', y: 'score', label: ['profession'] },
+    datasetIndex: 1
+  }
 };
 
-  //使用刚指定的配置项和数据显示图表。
-  myChart.setOption(option);
+myChart.setOption(option);
 
 </script>
 
