--- a/code/test.html
+++ b/code/test.html
@@ -32,27 +32,36 @@ body {
   // 指定图表的配置项和数据
 
 var option = {
-  legend:{
-    orient:"horizontal",  //horizontal
-    right:10,
-    top:"center",
+  xAxis: {
+    data: ['A', 'B', 'C', 'D', 'E']
   },
-  dataset: {
-    source: [
-      ['product', '2015', '2016', '2017'],
-      ['Matcha Latte', 43.3, 85.8, 93.7],
-      ['Milk Tea', 83.1, 73.4, 55.1],
-      ['Cheese Cocoa', 86.4, 65.2, 82.5],
-      ['Walnut Brownie', 72.4, 53.9, 39.1]
-    ]
-  },
-  xAxis: { type: 'category' },
   yAxis: {},
-  series: [{ type: 'bar' }, { type: 'bar' }, { type: 'bar' }]
-  
+  series: [
+    {
+      type:"line",
+      data: [10, 22, "-", 23, 19],
+      lineStyle:{
+        normal:{
+          color:"#329876",
+          width:4,
+          type:"dashed",
+        }
+      },
+      label:{
+        show:true,
+        position:"bottom",
+        textStyle:{
+          fontSize:20,
+        }
+      }
+    },
+    ],
 };
 
 myChart.setOption(option);
+
+
+
 
 </script>
 
